2002-11-16  James Antill  <james@and.org>

	* NEWS: Release 0.9.19

	* src/vstr_sect.c (vstr_sects_update_add): Add function, to auto
	update sections.
	(vstr_sects_update_del): Add function, to auto update sections.

	* src/vstr.c (vstr_nx_free_base): Make dealoction faster, and don't 
	call cache cbs except to say free yourself.

2002-11-09  James Antill  <james@and.org>

	* Documentation/Makefile.am (confexec_DATA): Add comparison to
	installed documentation.

2002-10-16  James Antill  <james@and.org>

	* configure.in (HAVE_ATTRIB_PURE): Fixup configure.in test so it dies
	on the stupid dietlibc headers, run... 
	perl -pi -e 's/__pure__/__dietlibc_pure__/;' dietlibc/include/**/*.h
	...if you care.

2002-10-13  James Antill  <james@and.org>

	* src/vstr_dbl/glibc/sysdeps/generic/printf_fphex.c (__printf_fphex): 
	Fixed 2 formatting bugs for width accounting and 0 flag, in the glibc
	code ... forwarded the fixes.

2002-10-12  James Antill  <james@and.org>

	* NEWS: Release 0.9.18

2002-10-11  James Antill  <james@and.org>

	* src/vstr_sect.c (vstr_sects_srch): Fixed off by one bug.

	* src/vstr_dbl/glibc/sysdeps/generic/printf_fphex.c (__printf_fphex): 
	Fixed an amazingly subtle bug in the glibc implementation of %a/%A ...
	forwarded the fix to the glibc maintainers.

2002-10-10  James Antill  <james@and.org>

	* src/vstr_add.c (vstr__convert_buf_ref): Fixed data bug when adding 
	vstr to a vstr with VSTR_TYPE_ADD_BUF_REF.
	(vstr__convert_buf_ref): Fixup VSTR_TYPE_ADD_BUF_REF so it relinks the
	node instead of free'ing it.

	* src/vstr_ref.c (vstr_ref_make_ptr): Renamed API.
	(vstr_ref_make_malloc): Renamed API.

2002-10-06  James Antill  <james@and.org>

	* src/vstr_srch.c (vstr__srch_chr_rev_slow): Fix bug where the last
	character could be missed.
	(vstr__srch_buf_rev_slow): Same bug as for _chr_rev_slow.
	(vstr__srch_vstr_rev_slow): Same bug as for _chr_rev_slow.

	* src/vstr_sc.c (vstr_sc_basename): Added function.
	(vstr_sc_dirname): Added function.
