@@ -10,10 +10,13 @@ VSTR_LIBS_DIR=$(VSTR_LOCAL_DIR)/src/.libs
 
 OPTWARNS=-W -Wall -Wundef -Wshadow -Wpointer-arith -Wbad-function-cast -Wcast-align -Wwrite-strings -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Winline -O0 -ggdb3 # -ansi -pedantic
 
-LOCAL=1
+HAVE_TIMER_Q=1
+HAVE_SSL=1
+
+LOCAL=0
 PROFILE=0
 # 1 == Static with libvstr, 2 == really static
-STATIC=1
+STATIC=0
 FAST=1
 
 ifeq ($(PROFILE),1)
@@ -38,33 +41,52 @@ OPTWARNS=-O2 -march=i386 -mcpu=i686
 endif
 
 ifeq ($(LOCAL),1)
-CFLAGS=-I$(VSTR_LOCAL_DIR)/include -I../include $(OPTWARNS) $(PROF)
-LDFLAGS=$(ST) $(LOCAL_LIBS) $(PROF)
+EX_CFLAGS=-I$(VSTR_LOCAL_DIR)/include -I../include $(OPTWARNS) $(PROF)
+EX_LDFLAGS=$(ST) $(LOCAL_LIBS) $(PROF)
 else
-CFLAGS=`pkg-config --cflags vstr` $(OPTWARNS) $(PROF)
-LDFLAGS=$(ST) `pkg-config --libs vstr` $(PROF)
+EX_CFLAGS=`pkg-config --cflags vstr` $(OPTWARNS) $(PROF)
+EX_LDFLAGS=$(ST) `pkg-config --libs vstr` $(PROF)
 endif
 
 # Isn't converted to pkg-config yet...
 TQ_CFLAGS=`gnome-config --cflags timer_q`
 TQ_LDFLAGS=`gnome-config --libs timer_q`
 
-FILES= ex_cat ex_hexdump ex_nl ex_mon_cp ex_lookup_ip ex_slowcat # ex_tst1
+SSL_CFLAGS=
+SSL_LDFLAGS=-lssl
+
+ifeq ($(HAVE_TIMER_Q),1)
+TIMER_Q_PROGS=ex_slowcat
+endif
+
+ifeq ($(HAVE_SSL),1)
+SSL_PROGS=ex_sg_compare
+endif
+
+FILES= ex_cat ex_hexdump ex_nl ex_mon_cp ex_lookup_ip \
+  $(TIMER_Q_PROGS) \
+  $(SSL_PROGS)
 
 all: $(FILES)
 
 ex_utils.o: ex_utils.c ex_utils.h
-		$(CC) $(CFLAGS) -o ex_utils.o -c ex_utils.c
+		$(CC) $(EX_CFLAGS) $(CFLAGS) -o ex_utils.o -c ex_utils.c
 
 ex%.o: ex%.c
-		$(CC) $(CFLAGS) -o $@ -c $<
+		$(CC) $(EX_CFLAGS) $(CFLAGS) -o $@ -c $<
 
 ex%: ex%.o ex_utils.o
-		$(CC) -o $@ $< ex_utils.o $(LDFLAGS)
+		$(CC) -o $@ $< ex_utils.o $(EX_LDFLAGS) $(LDFLAGS)
+
+ex_sg_compare: ex_sg_compare.c ex_utils.o
+		$(CC) $(EX_CFLAGS) $(SSL_CFLAGS) $(CFLAGS) -o ex_sg_compare.o -c $<
+		$(CC) -o $@ ex_sg_compare.o ex_utils.o $(SSL_LDFLAGS) $(EX_LDFLAGS) $(LDFLAGS)
 
 ex_slowcat: ex_slowcat.c ex_utils.o
-		$(CC) $(CFLAGS) $(TQ_CFLAGS) -o ex_slowcat.o -c $<
-		$(CC) -o $@ ex_slowcat.o ex_utils.o $(TQ_LDFLAGS) $(LDFLAGS)
+		$(CC) $(EX_CFLAGS) $(TQ_CFLAGS) $(CFLAGS) -o ex_slowcat.o -c $<
+		$(CC) -o $@ ex_slowcat.o ex_utils.o $(TQ_LDFLAGS) $(EX_LDFLAGS)
+$(LDFLAGS)
 
 clean:
 		rm -f *.o $(FILES)
+
