@@ -1,3 +1,12 @@
+2002-11-18  James Antill  <james@and.org>
+
+	* src/vstr_cache.c (vstr__free_cache): Fixed warning.
+
+	* src/vstr_add_fmt.c (vstr__add_fmt_number): Fixed some corner cases.
+
+	* tst/add_fmt/tst_num.c (tst): Added more tests for 
+	field width + precision.
+
 2002-11-16  James Antill  <james@and.org>
 
 	* NEWS: Release 0.9.19
